--- a/src/main/resources/messages.yml
+++ b/src/main/resources/messages.yml
@@ -14,6 +14,10 @@ reload:
   success: "&#33FF33Plugin successfully reloaded!"
   failed: "&#FF3333Failed to reload the plugin! Something is wrong in the &f%file%&#FF3333 file, look in the console or use a yaml validator to fix the errors!"
 
+reset:
+  success: "&#33FF33You have reset the calendar of %player%&#33FF33!"
+  failed: "&#FF3333Can't find player &f%player%&#FF3333!"
+
 time:
   second: "s"
   minute: "m"
