--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -25,7 +25,7 @@ timer-format: 1
 # set to -1 to disable
 update-gui: 20
 
-# should the player have these to claim presents?
+# should the player need these to claim presents?
 # list of options:
 # [PLAYTIME] - the playtime statistic of the player (in minutes)
 # [PERMISSION] - require a player to have a permission to claim presents
