--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
   <groupId>com.artillexstudios</groupId>
   <artifactId>AxCalendar</artifactId>
-  <version>1.6.0</version>
+  <version>1.7.0</version>
   <packaging>jar</packaging>
 
   <name>AxCalendar</name>
@@ -30,7 +30,7 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-shade-plugin</artifactId>
-        <version>3.3.0</version>
+        <version>3.5.3</version>
         <executions>
           <execution>
             <phase>package</phase>
@@ -53,12 +53,16 @@
                         <shadedPattern>com.artillexstudios.axcalendar.libs.gui</shadedPattern>
                     </relocation>
                     <relocation>
-                        <pattern>net.kyori.adventure</pattern>
+                        <pattern>net.kyori</pattern>
                         <shadedPattern>com.artillexstudios.axcalendar.libs.kyori</shadedPattern>
                     </relocation>
                     <relocation>
                         <pattern>revxrsal.commands</pattern>
                         <shadedPattern>com.artillexstudios.axcalendar.libs.lamp</shadedPattern>
+                    </relocation>
+                    <relocation>
+                        <pattern>com.zaxxer.hikari</pattern>
+                        <shadedPattern>com.artillexstudios.axcalendar.libs.hikari</shadedPattern>
                     </relocation>
                 </relocations>
             </configuration>
@@ -101,14 +105,15 @@
       <dependency>
           <groupId>org.spigotmc</groupId>
           <artifactId>spigot-api</artifactId>
-          <version>1.20.2-R0.1-SNAPSHOT</version>
+          <version>1.20.5-R0.1-SNAPSHOT</version>
           <scope>provided</scope>
       </dependency>
       <dependency>
           <groupId>com.artillexstudios.axapi</groupId>
           <artifactId>axapi</artifactId>
-          <version>1.4.96</version>
+          <version>1.4.186</version>
           <scope>compile</scope>
+          <classifier>all</classifier>
       </dependency>
       <dependency>
           <groupId>org.bstats</groupId>
@@ -125,31 +130,26 @@
       <dependency>
           <groupId>net.kyori</groupId>
           <artifactId>adventure-platform-bukkit</artifactId>
-          <version>4.3.0</version>
+          <version>4.3.2</version>
           <scope>compile</scope>
       </dependency>
       <dependency>
           <groupId>net.kyori</groupId>
           <artifactId>adventure-text-minimessage</artifactId>
-          <version>4.14.0</version>
+          <version>4.16.0</version>
           <scope>compile</scope>
       </dependency>
       <dependency>
           <groupId>net.kyori</groupId>
           <artifactId>adventure-text-serializer-legacy</artifactId>
-          <version>4.14.0</version>
+          <version>4.16.0</version>
           <scope>compile</scope>
       </dependency>
       <dependency>
           <groupId>net.kyori</groupId>
           <artifactId>adventure-api</artifactId>
-          <version>4.14.0</version>
+          <version>4.16.0</version>
           <scope>compile</scope>
-      </dependency>
-      <dependency>
-          <groupId>net.byteflux</groupId>
-          <artifactId>libby-bukkit</artifactId>
-          <version>1.2.0</version>
       </dependency>
       <dependency>
           <groupId>com.mysql</groupId>
@@ -164,12 +164,6 @@
           <scope>provided</scope>
       </dependency>
       <dependency>
-          <groupId>com.zaxxer</groupId>
-          <artifactId>HikariCP</artifactId>
-          <version>5.1.0</version>
-          <scope>provided</scope>
-      </dependency>
-      <dependency>
           <groupId>com.h2database</groupId>
           <artifactId>h2</artifactId>
           <version>2.1.214</version>
@@ -178,8 +172,14 @@
       <dependency>
           <groupId>me.clip</groupId>
           <artifactId>placeholderapi</artifactId>
-          <version>2.11.3</version>
+          <version>2.11.5</version>
           <scope>provided</scope>
+      </dependency>
+      <dependency>
+          <groupId>com.zaxxer</groupId>
+          <artifactId>HikariCP</artifactId>
+          <version>5.1.0</version>
+          <scope>compile</scope>
       </dependency>
   </dependencies>
 </project>
