--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.artillexstudios</groupId>
     <artifactId>AxCalendar</artifactId>
-    <version>2.3.3</version>
+    <version>2.4.0</version>
     <packaging>jar</packaging>
 
     <name>AxCalendar</name>
@@ -122,9 +122,15 @@
         <dependency>
             <groupId>com.artillexstudios.axapi</groupId>
             <artifactId>axapi</artifactId>
-            <version>1.4.671</version>
+            <version>1.4.710</version>
             <scope>compile</scope>
             <classifier>all</classifier>
+        </dependency>
+        <dependency>
+            <groupId>net.kyori</groupId>
+            <artifactId>adventure-platform-bukkit</artifactId>
+            <version>4.4.0</version>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.bstats</groupId>
